--- a/style.css
+++ b/style.css
@@ -4,192 +4,198 @@
     box-sizing: border-box;
 }
 
-@media screen and (min-width:1000px){
-    
-body {
-    background: linear-gradient(to top, rgb(74, 5, 159), rgb(30, 2, 57));
-    height: 100%;
-}
+@media screen and (min-width:1000px) {
 
-h2{
-    padding-bottom: 15px;
-}
-
-.perf {
-    text-align: center;
-    border-radius: 20px;
-    background-color: rgb(30, 2, 57);
-    padding: 25px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-}
-
-.r {
-    h1{
-        color: rgb(128, 40, 210);
-    }
-}
-
-.container {
-    border-radius: 20px;
-    margin: 5% 10%;
-    background-color: white;
-    padding: 100px;
-
-    h1 {
-        font-size: 300%;
-        font-family: arial;
-    }
-
-    h2 {
-        margin-top: 10px;
-        font-weight: 400;
-        font-family: arial;
-    }
-}
-
-.sone {
-    padding-top: 20px;
-    div {
-        border-radius: 20px;
-        margin-top: 15px;
-        background-color: rgb(30, 2, 57);
-    }
-    p{
-        color: rgb(215, 172, 255);
-    }
-}
-
-#img {
-    padding: 20px;
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-
-    img {
-        border: solid white 2px;
-        border-radius: 20px;
-        width: 600px;
-    }
-
-    p {
-        padding: 25px;
-        font-family: arial;
-        font-size: 35px;
-    }
-
-    span {
-        font-size: 15px;
-
-    }
-}
-
-p {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
-    color: white;
-    padding: 15px;
-}
-
-a {
-    text-decoration-line: inherit;
-}
-hr{
-    margin: 50px 0 0 0;
-}
-}
-
-
-@media screen and (max-width:1000px){
-    
     body {
         background: linear-gradient(to top, rgb(74, 5, 159), rgb(30, 2, 57));
         height: 100%;
     }
-    
-    h2{
+
+    h2 {
         padding-bottom: 15px;
     }
-    
+
     .perf {
-        margin: 20px;
         text-align: center;
         border-radius: 20px;
         background-color: rgb(30, 2, 57);
-        padding: 20px;
+        padding: 25px;
         display: grid;
-        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr;
     }
-    
+
     .r {
-        h1{
+        h1 {
             color: rgb(128, 40, 210);
         }
     }
-    
+
+    .container {
+        border-radius: 20px;
+        margin: 5% 10%;
+        background-color: white;
+        padding: 100px;
+
+        h1 {
+            font-size: 300%;
+            font-family: arial;
+        }
+
+        h2 {
+            margin-top: 10px;
+            font-weight: 400;
+            font-family: arial;
+        }
+    }
+
+    .sone {
+        padding-top: 20px;
+
+        div {
+            border-radius: 20px;
+            margin-top: 15px;
+            background-color: rgb(30, 2, 57);
+        }
+
+        p {
+            color: rgb(215, 172, 255);
+        }
+    }
+
+    #img {
+        padding: 20px;
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+
+        img {
+            border: solid white 2px;
+            border-radius: 20px;
+            width: 600px;
+        }
+
+        p {
+            padding: 25px;
+            font-family: arial;
+            font-size: 35px;
+        }
+
+        span {
+            font-size: 15px;
+
+        }
+    }
+
+    p {
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        text-align: center;
+        color: white;
+        padding: 15px;
+    }
+
+    a {
+        text-decoration-line: inherit;
+    }
+
+    hr {
+        margin: 50px 0 0 0;
+    }
+}
+
+
+@media screen and (max-width:1000px) {
+
+    body {
+        background: linear-gradient(to top, rgb(74, 5, 159), rgb(30, 2, 57));
+        height: 100%;
+    }
+
+    h2 {
+        padding-bottom: 15px;
+    }
+
+    .perf {
+        h1 {
+            margin: 20px;
+            text-align: center;
+            border-radius: 20px;
+            background-color: rgb(30, 2, 57);
+            padding: 20px;
+        }
+    }
+
+    .r {
+        h1 {
+            color: rgb(128, 40, 210);
+        }
+    }
+
     .container {
         border-radius: 20px;
         margin: 20px;
         background-color: white;
         padding: 30px;
-    
+
         h1 {
             font-size: ;
             font-family: arial;
         }
-    
+
         h2 {
             margin-top: 20px;
             font-weight: 400;
             font-family: arial;
         }
     }
-    
+
     .sone {
         padding-top: 20px;
+
         div {
             border-radius: 20px;
             margin-top: 20px;
             background-color: rgb(30, 2, 57);
         }
-        p{
+
+        p {
             color: rgb(215, 172, 255);
         }
     }
-    
+
     #img {
         padding: 20px;
         display: grid;
-        grid-template-rows: 1fr 0.8fr;
-    
+        grid-template-rows: 1fr ;
+
         img {
             border: solid white 2px;
             border-radius: 20px;
             width: 100%;
         }
-    
+
         p {
-            font-size: 100%;
+            font-size: auto;
             padding: 25px;
             font-family: arial;
         }
-    
+
         span {
             font-size: ;
-    
+
         }
     }
-    
+
     p {
         font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
         text-align: center;
         color: white;
     }
-    
+
     a {
         text-decoration-line: inherit;
     }
-    hr{
-        color:rgb(30, 2, 57) ;
-        margin: 1fr 0 0 0;
+
+    hr {
+        color: rgb(30, 2, 57);
+        margin: 30px 0 0 0;
     }
-    }
+}
