--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@
         padding: 100px;
 
         h1 {
+            margin: 20px 0 20px 0;
             font-size: 300%;
             font-family: arial;
         }
@@ -99,7 +100,37 @@
     hr {
         margin: 50px 0 0 0;
     }
+    
+    .sobrepc{
+        text-align: center;
+        border-radius: 15px;
+        background-color: rgb(30, 2, 57);
+        h1{
+            color: rgb(255, 255, 255);
+            padding:10px;
+        }
+        h3{
+            margin: 0 10% 10px 10%;
+            padding: 1px 10px 35px 10px;
+            font-family: arial;
+            font-size: 25px;
+            color: rgb(255, 255, 255);
+        }
+        img{
+            margin-top: 25px;
+            border: white solid;
+            padding: 10px;
+            border-radius: 100%;
+            width: 20%;
+        }
+        
+    }
+    .sobredv{
+        display: none;
+    }
+
 }
+
 
 
 @media screen and (max-width:1000px) {
@@ -112,7 +143,9 @@
     h2 {
         padding-bottom: 15px;
     }
-
+    h3{
+        font-family: arial;
+    }
     .perf {
         h1 {
             margin: 20px;
@@ -197,5 +230,32 @@
     hr {
         color: rgb(30, 2, 57);
         margin: 30px 0 0 0;
+    }
+    .sobredv{
+        text-align: center;
+        border-radius: 15px;
+        background-color: rgb(30, 2, 57);
+        h1{
+            color: rgb(255, 255, 255);
+            padding:10px;
+        }
+        h3{
+            margin: 0 10% 10px 10%;
+            padding: ;
+            font-family: arial;
+            font-size: 20px;
+            color: rgb(255, 255, 255);
+        }
+        img{
+            margin-top: 25px;
+            border: white solid;
+            padding: 10px;
+            border-radius: 100%;
+            width: 50%;
+        }
+        
+    }
+    .sobrepc{
+        display: none;
     }
 }
