--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
         background-position: 0% 50%;
     }
 }
+
 body {
     font-family: arial;
     color: #000c2f;
@@ -25,13 +26,15 @@ body {
     background-size: 300% 300%;
     background-position: 0% 50%;
 
-    height: 100vh;
+    height: 110vh;
 
     a {
         color: inherit;
         text-decoration-line: none;
     }
+
     text-align: center;
+
     @media screen and (min-width:1023px) {
 
         h3 {
@@ -276,12 +279,13 @@ body {
         }
     }
 }
+
 @media screen and (max-width: 1023px) {
     body {
-        height: 100vh;
+        height: 100%;
         text-align: center;
         margin: 0;
-        padding: 0;
+        padding: 3vh;
         font-family: sans-serif;
         background-color: #f4f4f4;
     }
@@ -310,8 +314,8 @@ body {
         flex-direction: column;
         align-items: center;
         gap: 15px;
-        
-        img{
+
+        img {
             width: 50%;
         }
     }
@@ -488,3 +492,30 @@ body {
         }
     }
 }
+
+.bemvindo {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    animation: fadeOut 2.5s forwards ease;
+  }
+  
+  @keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+    30% {
+        opacity: 1;
+      }
+    100% {
+      opacity: 0;
+      visibility: hidden;
+    }
+  }
